--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/Ultimate3AETool/manifest.json">
     <script src="app.js" defer></script>
   </head>
   <body>
