--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    
     <link rel="apple-touch-icon" sizes="180x180" href="/Ultimate3AETool/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/Ultimate3AETool/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/Ultimate3AETool/icons/favicon-16x16.png">
-    
     <link rel="manifest" href="/Ultimate3AETool/manifest.json">
+    <meta name="theme-color" content="#ffffff">
     <script src="app.js" defer></script>
   </head>
   <body>
